sysyruntimelibrary-master/functional_test/64_alpha_count.err
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/64_alpha_count.sy:11:22: error: syntax error, unexpected R_PARENTHESIS
11|         temp = getch()
  |                       ^
before semantic ast:
 decList()
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/64_alpha_count.sy:0:0: error: not find main function
